# claude-agent

./: .gitignore  CLAUDE.md  DATASET.md  Makefile  PRD.md  README.md  TODO.md  V1-DATASET-SPEC.md  champions-business-case.md  fireworks.py  pyproject.toml
.claude/: loop.md
.github/workflows/: ci.yml  scaffold-validation.yml  scheduled-refresh-placeholder.yml
configs/: pipeline.json
dashboard/: README.md  app.py  build_static.py  game_data.py  streamlit_app.py
data/marts/: README.md
data/normalized/: README.md  legality_snapshot.schema.json  pokemon.schema.json  pokemon_asset.schema.json  pokemon_stat_canonical.schema.json  pokemon_stat_champions.schema.json  pokemon_stat_delta.schema.json  tournament_event.schema.json  tournament_team.schema.json  tournament_team_member.schema.json
data/staging/: README.md  bulbagarden.schema.json  munchstats.csv  munchstats.schema.json  opgg_champions.csv  opgg_champions.schema.json  pokeapi.csv  pokeapi.schema.json  pokebase.schema.json
dbt/: dbt_project.yml  profiles.yml
dbt/analyses/: README.md  largest_legal_pool_changes_by_regulation.sql  most_used_legal_pokemon.sql  top_stat_gainers_losers.sql
dbt/seeds/: bulbagarden_title_to_pokeapi_form.csv  munchstats_name_to_pokeapi_form.csv  opgg_key_to_pokeapi_form.csv  pokeapi_move_types.csv  pokebase_slug_to_pokeapi_form.csv  schema.yml
docs/: business-case.md  dashboard.md  data-dictionary-template.md  data-sources.md  dataset-spec.md  implementation-scaffold.md  loop.md  prd.md  todo.md
docs/dashboard/: index.html
pipelines/: cli.py
pipelines/dashboard/: build.py  (+1 more)
(+128 files in other folders)
