[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "champions-dataset"
version = "0.1.0"
description = "Scaffolding for the Pokémon Champions dataset refresh pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
champions-dataset = "champions_dataset.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
