[project]
name = "pokemon-champions-data-platform"
version = "0.1.0"
description = "Build/test tooling for the Pokémon Champions competitive data platform"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.2",
    "requests>=2.32",
    "dbt-core>=1.8,<2.0",
    "dbt-duckdb>=1.8,<2.0",
    "playwright>=1.45",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
pokemon-champions-cli = "pipelines.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
